// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keeps objects as is 1`] = `
"\\"use strict\\";

var fill1 = function fill1() {
  var top = arguments.length > 0 && arguments[0] !== undefined ? arguments[0] : 0;
  var left = arguments.length > 1 && arguments[1] !== undefined ? arguments[1] : 0;
  var right = arguments.length > 2 && arguments[2] !== undefined ? arguments[2] : 0;
  var bottom = arguments.length > 3 && arguments[3] !== undefined ? arguments[3] : 0;
  return {
    position: 'absolute',
    top: top,
    right: right,
    bottom: bottom,
    left: left
  };
};

var fill2 = function fill2() {
  var top = arguments.length > 0 && arguments[0] !== undefined ? arguments[0] : 0;
  var left = arguments.length > 1 && arguments[1] !== undefined ? arguments[1] : 0;
  var right = arguments.length > 2 && arguments[2] !== undefined ? arguments[2] : 0;
  var bottom = arguments.length > 3 && arguments[3] !== undefined ? arguments[3] : 0;
  return {
    position: 'absolute',
    top: top,
    right: right,
    bottom: bottom,
    left: left
  };
};

exports.__linariaPreval = [fill1, fill2];"
`;

exports[`keeps only code which is related to \`a\` 1`] = `
"\\"use strict\\";

var _require = require('…'),
    color = _require.whiteColor,
    anotherColor = _require.anotherColor;

var a = color || anotherColor;
color.green = '#0f0';
exports.__linariaPreval = [a];"
`;

exports[`keeps only code which is related to \`anotherColor\` 1`] = `
"\\"use strict\\";

var _require = require('…'),
    anotherColor = _require.anotherColor;

exports.__linariaPreval = [anotherColor];"
`;

exports[`keeps only code which is related to \`color\` 1`] = `
"\\"use strict\\";

var _require = require('…'),
    color = _require.whiteColor;

color.green = '#0f0';
exports.__linariaPreval = [color];"
`;

exports[`keeps reused exports 1`] = `
"\\"use strict\\";

var bar = function bar() {
  return 'hello world';
};

exports.bar = bar;
var foo = exports.bar();
exports.__linariaPreval = [foo];"
`;

exports[`removes all 1`] = `
"\\"use strict\\";

exports.__linariaPreval = [];"
`;

exports[`shaker assigning to exports 1`] = `
"import { css } from \\"@linaria/core\\";
import { Padding } from \\"../__fixtures__/assignToExport\\";
export const square = \\"square_s1t92lw9\\";"
`;

exports[`shaker assigning to exports 2`] = `

CSS:

.square_s1t92lw9 {
  div {
    padding: 4px;
  }
}

Dependencies: ../__fixtures__/assignToExport

`;

exports[`shaker derives display name from filename 1`] = `
"import { styled } from '@linaria/react';
export default /*#__PURE__*/styled('h1')({
  name: \\"FancyName0\\",
  class: \\"FancyName0_f1tjvuuv\\"
});"
`;

exports[`shaker derives display name from filename 2`] = `

CSS:

.FancyName0_f1tjvuuv {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`shaker derives display name from parent folder name 1`] = `
"import { styled } from '@linaria/react';
export default /*#__PURE__*/styled('h1')({
  name: \\"FancyName0\\",
  class: \\"FancyName0_fud4l0y\\"
});"
`;

exports[`shaker derives display name from parent folder name 2`] = `

CSS:

.FancyName0_fud4l0y {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`shaker does not strip instanbul coverage sequences 1`] = `
"function cov_2dr9r1nt95() {
  var path = \\"/home/user/project/file.js\\";
  var hash = \\"5e19dcf6176c05d2bb97c59d980c34fe0e848af3\\";
  var global = new Function(\\"return this\\")();
  var gcv = \\"__coverage__\\";
  var coverageData = {
    path: \\"/home/user/project/file.js\\",
    statementMap: {
      \\"0\\": {
        start: {
          line: 1,
          column: 10
        },
        end: {
          line: 1,
          column: 12
        }
      },
      \\"1\\": {
        start: {
          line: 3,
          column: 21
        },
        end: {
          line: 5,
          column: 1
        }
      }
    },
    fnMap: {},
    branchMap: {},
    s: {
      \\"0\\": 0,
      \\"1\\": 0
    },
    f: {},
    b: {},
    _coverageSchema: \\"1a1c01bbd47fc00a2c39e90264f33305004495a9\\",
    hash: \\"5e19dcf6176c05d2bb97c59d980c34fe0e848af3\\"
  };
  var coverage = global[gcv] || (global[gcv] = {});

  if (!coverage[path] || coverage[path].hash !== hash) {
    coverage[path] = coverageData;
  }

  var actualCoverage = coverage[path];
  {
    // @ts-ignore
    cov_2dr9r1nt95 = function () {
      return actualCoverage;
    };
  }
  return actualCoverage;
}

cov_2dr9r1nt95();
const a = (cov_2dr9r1nt95().s[0]++, 42);
export const Title = (cov_2dr9r1nt95().s[1]++, \`
  height: \${a}px;
\`);"
`;

exports[`shaker does not strip instanbul coverage sequences 2`] = `Object {}`;

exports[`shaker evaluates babel helpers 1`] = `
"import { styled } from '@linaria/react';

function copyAndExtend(a, b) {
  return { ...a,
    ...b
  };
}

const obj = copyAndExtend({
  a: 1
}, {
  a: 2
});
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\"
});"
`;

exports[`shaker evaluates babel helpers 2`] = `

CSS:

.Title_t1t92lw9 {
  &:before {
    content: "2"
  }
}

Dependencies: @babel/runtime/helpers/interopRequireDefault, @babel/runtime/helpers/defineProperty

`;

exports[`shaker evaluates chain of reexports 1`] = `
"import { styled } from '@linaria/react';
import { fooStyles } from \\"../__fixtures__/re-exports\\";
const value = fooStyles.foo;
export const H1 = /*#__PURE__*/styled('h1')({
  name: \\"H1\\",
  class: \\"H1_h1t92lw9\\"
});"
`;

exports[`shaker evaluates chain of reexports 2`] = `

CSS:

.H1_h1t92lw9 {
  color: foo;
}

Dependencies: ../__fixtures__/re-exports

`;

exports[`shaker evaluates complex styles with functions and nested selectors 1`] = `
"import { css } from '@linaria/core';
export const bareIconClass = \\"bareIconClass_b1t92lw9\\";

const getSizeStyles = fs => ({
  [\`&.\${bareIconClass}\`]: {
    fontSize: fs * 1.5
  }
});

export const SIZES = {
  XS: \\"XS_x1xjmq2i\\"
};"
`;

exports[`shaker evaluates complex styles with functions and nested selectors 2`] = `

CSS:

.bareIconClass_b1t92lw9 {}
.XS_x1xjmq2i {&.bareIconClass_b1t92lw9 { font-size: 16.5px; }}

Dependencies: @babel/runtime/helpers/interopRequireDefault, @babel/runtime/helpers/defineProperty

`;

exports[`shaker evaluates component interpolations 1`] = `
"const {
  styled
} = require('@linaria/react');

export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\"
});
export const Paragraph = /*#__PURE__*/styled('p')({
  name: \\"Paragraph\\",
  class: \\"Paragraph_p1xjmq2i\\"
});"
`;

exports[`shaker evaluates component interpolations 2`] = `

CSS:

.Title_t1t92lw9 {
  color: red;
}
.Paragraph_p1xjmq2i {
  .Title_t1t92lw9 {
    color: blue;
  }
}

Dependencies: NA

`;

exports[`shaker evaluates dependencies with sequence expression 1`] = `
"import { styled } from '@linaria/react';
let external = 0;
const color = (external, () => 'blue');
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\",
  vars: {
    \\"t1t92lw9-0\\": [color]
  }
});"
`;

exports[`shaker evaluates dependencies with sequence expression 2`] = `

CSS:

.Title_t1t92lw9 {
  color: var(--t1t92lw9-0);
}

Dependencies: NA

`;

exports[`shaker evaluates expressions with dependencies 1`] = `
"import { styled } from '@linaria/react';
import slugify from '../__fixtures__/slugify';
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\"
});"
`;

exports[`shaker evaluates expressions with dependencies 2`] = `

CSS:

.Title_t1t92lw9 {
  &:before {
    content: "6og6jy"
  }
}

Dependencies: @babel/runtime/helpers/interopRequireDefault, ../__fixtures__/slugify

`;

exports[`shaker evaluates expressions with expressions depending on shared dependency 1`] = `
"import { styled } from '@linaria/react';

const slugify = require('../__fixtures__/slugify').default;

const boo = t => slugify(t) + 'boo';

const bar = t => slugify(t) + 'bar';

export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\"
});"
`;

exports[`shaker evaluates expressions with expressions depending on shared dependency 2`] = `

CSS:

.Title_t1t92lw9 {
  &:before {
    content: "6og6jyboo6og6jybar"
  }
}

Dependencies: ../__fixtures__/slugify

`;

exports[`shaker evaluates functions with nested identifiers 1`] = `
"import { styled } from '@linaria/react';
const objects = {
  key: {
    fontSize: 12
  }
};

const foo = k => {
  const obj = objects[k];
  return obj;
};

export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\"
});"
`;

exports[`shaker evaluates functions with nested identifiers 2`] = `

CSS:

.Title_t1t92lw9 {
  font-size: 12px;
}

Dependencies: NA

`;

exports[`shaker evaluates identifier in scope 1`] = `
"import { styled } from '@linaria/react';
const answer = 42;

const foo = () => answer;

const days = foo() + ' days';
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\"
});"
`;

exports[`shaker evaluates identifier in scope 2`] = `

CSS:

.Title_t1t92lw9 {
  &:before {
    content: "42 days"
  }
}

Dependencies: NA

`;

exports[`shaker evaluates imported typescript enums 1`] = `
"import { styled } from '@linaria/react';
import { Colors } from '../__fixtures__/enums';
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_taxxqrn\\"
});"
`;

exports[`shaker evaluates imported typescript enums 2`] = `

CSS:

.Title_taxxqrn {
  color: #27509A;
}

Dependencies: ../__fixtures__/enums

`;

exports[`shaker evaluates interpolations with sequence expression 1`] = `
"import { styled } from '@linaria/react';
let external = 0;
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\",
  vars: {
    \\"t1t92lw9-0\\": [(external, () => \\"blue\\")]
  }
});"
`;

exports[`shaker evaluates interpolations with sequence expression 2`] = `

CSS:

.Title_t1t92lw9 {
  color: var(--t1t92lw9-0);
}

Dependencies: NA

`;

exports[`shaker evaluates local expressions 1`] = `
"import { styled } from '@linaria/react';
const answer = 42;

const foo = () => answer;

export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\"
});"
`;

exports[`shaker evaluates local expressions 2`] = `

CSS:

.Title_t1t92lw9 {
  &:before {
    content: "42 days"
  }
}

Dependencies: NA

`;

exports[`shaker evaluates multiple expressions with shared dependency 1`] = `
"import { styled } from '@linaria/react';

const slugify = require('../__fixtures__/slugify').default;

const boo = t => slugify(t) + 'boo';

const bar = t => slugify(t) + 'bar';

export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\"
});"
`;

exports[`shaker evaluates multiple expressions with shared dependency 2`] = `

CSS:

.Title_t1t92lw9 {
  &:before {
    content: "6og6jyboo"
    content: "6og6jybar"
  }
}

Dependencies: ../__fixtures__/slugify

`;

exports[`shaker evaluates typescript enums 1`] = `
"import { styled } from '@linaria/react';
var Colors;

(function (Colors) {
  Colors[\\"BLUE\\"] = \\"#27509A\\";
})(Colors || (Colors = {}));

export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_taxxqrn\\"
});"
`;

exports[`shaker evaluates typescript enums 2`] = `

CSS:

.Title_taxxqrn {
  color: #27509A;
}

Dependencies: NA

`;

exports[`shaker exporting objects 1`] = `
"import { css } from \\"@linaria/core\\";
import object from \\"../__fixtures__/objectExport\\";
export const square = \\"square_s1t92lw9\\";"
`;

exports[`shaker exporting objects 2`] = `

CSS:

.square_s1t92lw9 {
  div {
    margin: 5px;
  }
}

Dependencies: @babel/runtime/helpers/interopRequireDefault, ../__fixtures__/objectExport

`;

exports[`shaker exporting objects with computed keys 1`] = `
"import { css } from \\"@linaria/core\\";
import { object } from \\"../__fixtures__/computedKeys\\";
export const square = \\"square_s1t92lw9\\";"
`;

exports[`shaker exporting objects with computed keys 2`] = `

CSS:

.square_s1t92lw9 {
  div {
    color: blue;
  }
}

Dependencies: ../__fixtures__/computedKeys

`;

exports[`shaker exporting sequence expressions 1`] = `
"import { css } from \\"@linaria/core\\";
import number from \\"../__fixtures__/sequenceExport\\";
export const square = \\"square_s1t92lw9\\";"
`;

exports[`shaker exporting sequence expressions 2`] = `

CSS:

.square_s1t92lw9 {
  div {
    height: 5px;
  }
}

Dependencies: @babel/runtime/helpers/interopRequireDefault, ../__fixtures__/sequenceExport

`;

exports[`shaker generates stable class names 1`] = `
"import { styled } from '@linaria/react';
export const T1 = /*#__PURE__*/styled('h1')({
  name: \\"T1\\",
  class: \\"T1_t11kcpnd\\"
});
export const T2 = /*#__PURE__*/styled('h2')({
  name: \\"T2\\",
  class: \\"T2_t1xdipzs\\"
});
export const T3 = /*#__PURE__*/styled('h3')({
  name: \\"T3\\",
  class: \\"T3_tmgfls7\\"
});
export default /*#__PURE__*/styled('p')({
  name: \\"components-library3\\",
  class: \\"components-library3_c30gynh\\"
});"
`;

exports[`shaker generates stable class names 2`] = `

CSS:

.T1_t11kcpnd {
  background: #111;
}
.T2_t1xdipzs {
  background: #222;
}
.T3_tmgfls7 {
  .T2_t1xdipzs {
    background: #333;
  }
}
.components-library3_c30gynh {
  background: #333;
}

Dependencies: NA

`;

exports[`shaker handles complex component 1`] = `
"// Dead code in this file should be ignored
import deadDep from 'unknown-dependency';
import { styled } from '@linaria/react';
export const deadValue = deadDep();
const objects = {
  font: {
    fontSize: 12
  },
  box: {
    border: '1px solid red'
  }
};

const foo = k => {
  const {
    [k]: obj
  } = objects;
  return obj;
};

objects.font.fontWeight = 'bold';
export const whiteColor = '#fff';
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1us8k4s\\"
});"
`;

exports[`shaker handles complex component 2`] = `

CSS:

.Title_t1us8k4s {
  font-size: 12px; font-weight: bold;
  border: 1px solid red;
}

Dependencies: NA

`;

exports[`shaker handles escapes properly 1`] = `
"import { styled } from '@linaria/react';
const selectors = ['a', 'b'];
export const Block = /*#__PURE__*/styled('div')({
  name: \\"Block\\",
  class: \\"Block_b3rflbm\\"
});"
`;

exports[`shaker handles escapes properly 2`] = `

CSS:

.Block_b3rflbm {
  a { content: "\\u000A"; } b { content: "\\u000A"; };
}

Dependencies: @babel/runtime/helpers/interopRequireDefault, @babel/runtime/helpers/taggedTemplateLiteral

`;

exports[`shaker handles indirect wrapping another styled component 1`] = `
"const {
  styled
} = require('@linaria/react');

const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\"
});

const hoc = Cmp => Cmp;

export const CustomTitle = /*#__PURE__*/styled(hoc(Title))({
  name: \\"CustomTitle\\",
  class: \\"CustomTitle_c1xjmq2i\\"
});"
`;

exports[`shaker handles indirect wrapping another styled component 2`] = `

CSS:

.Title_t1t92lw9 {
  color: red;
}
.CustomTitle_c1xjmq2i.Title_t1t92lw9 {
  font-size: 24px;
  color: blue;
}

Dependencies: NA

`;

exports[`shaker handles wrapping another styled component 1`] = `
"const {
  css
} = require('..');

const {
  styled
} = require('@linaria/react');

const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\"
});
export const BlueTitle = /*#__PURE__*/styled(Title)({
  name: \\"BlueTitle\\",
  class: \\"BlueTitle_b1xjmq2i\\"
});
export const GreenTitle = /*#__PURE__*/styled(BlueTitle)({
  name: \\"GreenTitle\\",
  class: \\"GreenTitle_g2qjq78\\"
});"
`;

exports[`shaker handles wrapping another styled component 2`] = `

CSS:

.Title_t1t92lw9 {
  color: red;
}
.BlueTitle_b1xjmq2i.Title_t1t92lw9 {
  font-size: 24px;
  color: blue;
}
.GreenTitle_g2qjq78.BlueTitle_b1xjmq2i.Title_t1t92lw9 {
  color: green;
}

Dependencies: NA

`;

exports[`shaker hoistable identifiers 1`] = `
"import { styled } from '@linaria/react';
{
  var days = 42;
}
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\"
});"
`;

exports[`shaker hoistable identifiers 2`] = `

CSS:

.Title_t1t92lw9 {
  &:before {
    content: "42"
  }
}

Dependencies: NA

`;

exports[`shaker ignores external expressions 1`] = `
"import { styled } from '@linaria/react';

const generate = props => props.content;

export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\",
  vars: {
    \\"t1t92lw9-0\\": [generate]
  }
});"
`;

exports[`shaker ignores external expressions 2`] = `

CSS:

.Title_t1t92lw9 {
  &:before {
    content: "var(--t1t92lw9-0)"
  }
}

Dependencies: NA

`;

exports[`shaker ignores inline arrow function expressions 1`] = `
"import { styled } from '@linaria/react';
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\",
  vars: {
    \\"t1t92lw9-0\\": [props => props.content]
  }
});"
`;

exports[`shaker ignores inline arrow function expressions 2`] = `

CSS:

.Title_t1t92lw9 {
  &:before {
    content: "var(--t1t92lw9-0)"
  }
}

Dependencies: NA

`;

exports[`shaker ignores inline vanilla function expressions 1`] = `
"import { styled } from '@linaria/react';
export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\",
  vars: {
    \\"t1t92lw9-0\\": [function (props) {
      return props.content;
    }]
  }
});"
`;

exports[`shaker ignores inline vanilla function expressions 2`] = `

CSS:

.Title_t1t92lw9 {
  &:before {
    content: "var(--t1t92lw9-0)"
  }
}

Dependencies: NA

`;

exports[`shaker inlines array styles as CSS string 1`] = `
"import { styled } from '@linaria/react';

const fill = (top = 0, left = 0, right = 0, bottom = 0) => [{
  position: 'absolute'
}, {
  top,
  right,
  bottom,
  left
}];

export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\"
});"
`;

exports[`shaker inlines array styles as CSS string 2`] = `

CSS:

.Title_t1t92lw9 {
  position: absolute; top: 0; right: 0; bottom: 0; left: 0;
}

Dependencies: NA

`;

exports[`shaker inlines object styles as CSS string 1`] = `
"import { styled } from '@linaria/react';

const fill = (top = 0, left = 0, right = 0, bottom = 0) => ({
  position: 'absolute',
  top,
  right,
  bottom,
  left
});

export const Title = /*#__PURE__*/styled('h1')({
  name: \\"Title\\",
  class: \\"Title_t1t92lw9\\"
});"
`;

exports[`shaker inlines object styles as CSS string 2`] = `

CSS:

.Title_t1t92lw9 {
  position: absolute; top: 0; right: 0; bottom: 0; left: 0;
}

Dependencies: NA

`;

exports[`shaker it should not throw location error for hoisted identifier 1`] = `
"import React from 'react';
import { css } from '@linaria/core';

const size = () => 5;

var _ref = size();

export default function Component() {
  const color = _ref;
  return \\"source0_s1t92lw9\\";
}"
`;

exports[`shaker it should not throw location error for hoisted identifier 2`] = `

CSS:

.source0_s1t92lw9 {opacity:5;}

Dependencies: NA

`;

exports[`shaker non-hoistable identifiers 1`] = `
"<<DIRNAME>>/source.js: An error occurred when evaluating the expression:

  > days is not defined.

  Make sure you are not using a browser or Node specific API and all the variables are available in static context.
  Linaria have to extract pieces of your code to resolve the interpolated values.
  Defining styled component or class will not work inside:
    - function,
    - class,
    - method,
    - loop,
  because it cannot be statically determined in which context you use them.
  That's why some variables may be not defined during evaluation.
      
   7 | export const Title = styled.h1\`
   8 |   &:before {
>  9 |     content: \\"\${days}\\"
     |                 ^^^^
  10 |   }
  11 | \`;"
`;

exports[`shaker should handle shadowed identifier inside components 1`] = `
"import React from 'react';
import { css } from '@linaria/core';
const color = 'red';
var _ref = 'blue';
var _ref2 = {
  color: _ref
};
export default function Component() {
  const color = _ref;
  const val = _ref2;
  return React.createElement('div', {
    className: \\"className_c1t92lw9\\"
  });
}"
`;

exports[`shaker should handle shadowed identifier inside components 2`] = `

CSS:

.className_c1t92lw9 {background-color:blue;}

Dependencies: NA

`;

exports[`shaker should interpolate imported components 1`] = `
"import { css } from \\"@linaria/core\\";
import { Title } from \\"../__fixtures__/complex-component\\";
export const square = \\"square_s1t92lw9\\";"
`;

exports[`shaker should interpolate imported components 2`] = `

CSS:

.square_s1t92lw9 {
  .Title_t1us8k4s {
    color: red;
  }
}

Dependencies: ../__fixtures__/complex-component

`;

exports[`shaker should interpolate imported variables 1`] = `
"import { css } from \\"@linaria/core\\";
import { whiteColor } from \\"../__fixtures__/complex-component\\";
export const square = \\"square_s1t92lw9\\";"
`;

exports[`shaker should interpolate imported variables 2`] = `

CSS:

.square_s1t92lw9 {
  color: #fff
}

Dependencies: ../__fixtures__/complex-component

`;

exports[`shaker should process \`css\` calls inside components 1`] = `
"import React from 'react';
import { css } from '@linaria/core';
export function Component() {
  const opacity = 0.2;
  const className = \\"className_c1t92lw9\\";
  return React.createElement(\\"div\\", {
    className
  });
}"
`;

exports[`shaker should process \`css\` calls inside components 2`] = `

CSS:

.className_c1t92lw9 {
    opacity: 0.2;
  }

Dependencies: NA

`;

exports[`shaker should process \`css\` calls referencing other \`css\` calls inside components 1`] = `
"import React from 'react';
import { css } from '@linaria/core';
export function Component() {
  const outer = \\"outer_o1t92lw9\\";
  const inner = \\"inner_i1xjmq2i\\";
  return React.createElement(\\"div\\", {
    className: outer
  }, \\"outer\\", React.createElement(\\"div\\", {
    className: inner
  }, \\"inner\\"));
}"
`;

exports[`shaker should process \`css\` calls referencing other \`css\` calls inside components 2`] = `

CSS:

.outer_o1t92lw9 {
    color: red;
  }
.inner_i1xjmq2i {
    color: green;
    .outer_o1t92lw9:hover & {
      color: blue;
    }
  }

Dependencies: NA

`;

exports[`shaker should process \`css\` calls with complex interpolation inside components 1`] = `
"import React from 'react';
import { css } from '@linaria/core';
import externalDep from '../__fixtures__/sample-script';
const globalObj = {
  opacity: 0.5
};
var _ref = externalDep;
var _ref2 = {
  value: 0.2,
  cell: \\"cell_c1t92lw9\\"
};
var _ref3 = _ref2;
export function Component() {
  const classes = _ref2;
  const classes2 = _ref3;
  const referencedExternalDep = _ref;
  const className = \\"className_c1xjmq2i\\";
  return React.createElement(\\"div\\", {
    className
  });
}"
`;

exports[`shaker should process \`css\` calls with complex interpolation inside components 2`] = `

CSS:

.cell_c1t92lw9 {
      opacity: 0;
    }
.className_c1xjmq2i {
    opacity: 0.5;
    font-size: 42
    font-size: 42

    &:hover .cell_c1t92lw9 {
      opacity: 0.2;
    }
  }

Dependencies: @babel/runtime/helpers/interopRequireDefault, ../__fixtures__/sample-script

`;

exports[`shaker should process \`styled\` calls inside components 1`] = `
"import React from 'react';
import { css } from '@linaria/core';
export function Component() {
  const opacity = 0.2;
  const MyComponent = styled.h1\`
    opacity: \${opacity};
  \`;
  return React.createElement(MyComponent);
}"
`;

exports[`shaker should process \`styled\` calls inside components 2`] = `Object {}`;

exports[`shaker should process \`styled\` calls with complex interpolation inside components 1`] = `
"import React from 'react';
import { css } from '@linaria/core';
const globalObj = {
  opacity: 0.5
};
const Styled1 = styled.p\`
  opacity: \${globalObj.opacity}
\`;
export function Component() {
  const classes = {
    value: 0.2,
    cell: \\"cell_c1xjmq2i\\"
  };
  const classes2 = classes;
  const MyComponent = styled\`
    opacity: \${globalObj.opacity};

    &:hover .\${classes2.cell} {
      opacity: \${classes.value};
    }
    \${Styled1} {
      font-size: 1;
    }
  \`;
  return React.createElement(MyComponent);
}"
`;

exports[`shaker should process \`styled\` calls with complex interpolation inside components 2`] = `

CSS:

.cell_c1xjmq2i {
      opacity: 0;
    }

Dependencies: NA

`;

exports[`shaker should work with String and Number object 1`] = `
"import { css } from '@linaria/core';
export const style = \\"style_s1t92lw9\\";"
`;

exports[`shaker should work with String and Number object 2`] = `

CSS:

.style_s1t92lw9 {
  width: 100%;
  opacity: 0.75;
}

Dependencies: NA

`;

exports[`shaker should work with generated classnames as selectors 1`] = `
"import { css } from \\"@linaria/core\\";
export const text = \\"text_t1t92lw9\\";
export const square = \\"square_s1xjmq2i\\";"
`;

exports[`shaker should work with generated classnames as selectors 2`] = `

CSS:

.text_t1t92lw9 {}
.square_s1xjmq2i {
  .text_t1t92lw9 {
    color: red;
  }
}

Dependencies: NA

`;

exports[`shaker should work with wildcard imports 1`] = `
"import { css } from \\"@linaria/core\\";
import * as mod from \\"../__fixtures__/complex-component\\";
const color = mod[\\"whiteColor\\"];
export const square = \\"square_s1t92lw9\\";"
`;

exports[`shaker should work with wildcard imports 2`] = `

CSS:

.square_s1t92lw9 {
  .Title_t1us8k4s {
    color: #fff;
  }
}

Dependencies: @babel/runtime/helpers/typeof, ../__fixtures__/complex-component

`;

exports[`shaker should work with wildcard reexports 1`] = `
"import { css } from \\"@linaria/core\\";
import { foo1 } from \\"../__fixtures__/reexports\\";
export const square = \\"square_s1t92lw9\\";"
`;

exports[`shaker should work with wildcard reexports 2`] = `

CSS:

.square_s1t92lw9 {
  color: foo1;
}

Dependencies: ../__fixtures__/reexports

`;

exports[`shaker simplifies react components 1`] = `
"import React from 'react';
import { styled } from '@linaria/react';
import constant from './broken-dependency';

const FuncComponent = props => <div>{props.children + constant}</div>;

class ClassComponent extends React.PureComponent {
  method() {
    return constant;
  }

  render() {
    return <div>{props.children + constant}</div>;
  }

}

export const StyledFunc = /*#__PURE__*/styled(FuncComponent)({
  name: \\"StyledFunc\\",
  class: \\"StyledFunc_s1t92lw9\\"
});
export const StyledClass = /*#__PURE__*/styled(ClassComponent)({
  name: \\"StyledClass\\",
  class: \\"StyledClass_s1xjmq2i\\"
});"
`;

exports[`shaker simplifies react components 2`] = `

CSS:

.StyledFunc_s1t92lw9 {
  color: red;
}
.StyledClass_s1xjmq2i {
  color: blue;
}

Dependencies: @babel/runtime/helpers/interopRequireDefault, react

`;

exports[`shaker throws codeframe error when evaluation fails 1`] = `
"<<DIRNAME>>/source.js: An error occurred when evaluating the expression:

  > This will fail.

  Make sure you are not using a browser or Node specific API and all the variables are available in static context.
  Linaria have to extract pieces of your code to resolve the interpolated values.
  Defining styled component or class will not work inside:
    - function,
    - class,
    - method,
    - loop,
  because it cannot be statically determined in which context you use them.
  That's why some variables may be not defined during evaluation.
      
  4 |
  5 | export const Title = styled.h1\`
> 6 |   font-size: \${foo()}px;
    |                ^^^^^
  7 | \`;"
`;

exports[`shaker throws if couldn't determine a display name 1`] = `
"<<DIRNAME>>/.js: Couldn't determine a name for the component. Ensure that it's either:
- Assigned to a variable
- Is an object property
- Is a prop in a JSX element

  1 | import { styled } from '@linaria/react';
  2 |
> 3 | export default styled.h1\`
    |                ^
  4 |   font-size: 14px;
  5 | \`;"
`;

exports[`shaker throws when interpolation evaluates to NaN 1`] = `
"<<DIRNAME>>/source.js: The expression evaluated to 'NaN', which is probably a mistake. If you want it to be inserted into CSS, explicitly cast or transform the value to a string, e.g. - 'String(height)'.
  4 |
  5 | export const Title = styled.h1\`
> 6 |   height: \${height}px;
    |             ^^^^^^
  7 | \`;"
`;

exports[`shaker throws when interpolation evaluates to null 1`] = `
"<<DIRNAME>>/source.js: The expression evaluated to 'null', which is probably a mistake. If you want it to be inserted into CSS, explicitly cast or transform the value to a string, e.g. - 'String(color)'.
  4 |
  5 | export const Title = styled.h1\`
> 6 |   color: \${color};
    |            ^^^^^
  7 | \`;"
`;

exports[`shaker throws when interpolation evaluates to undefined 1`] = `
"<<DIRNAME>>/source.js: The expression evaluated to 'undefined', which is probably a mistake. If you want it to be inserted into CSS, explicitly cast or transform the value to a string, e.g. - 'String(fontSize)'.
  4 |
  5 | export const Title = styled.h1\`
> 6 |   font-size: \${fontSize};
    |                ^^^^^^^^
  7 | \`;"
`;

exports[`shakes assignment patterns 1`] = `
"\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime/helpers/interopRequireDefault\\");

var _toArray2 = _interopRequireDefault(require(\\"@babel/runtime/helpers/toArray\\"));

var _extends2 = _interopRequireDefault(require(\\"@babel/runtime/helpers/extends\\"));

var _ = 2,
    identifier = _ === void 0 ? 1 : _;
var _a$b = {
  a: 1,
  b: 2
};
_a$b = _a$b === void 0 ? {} : _a$b;
var object = (_extends2.default)({}, _a$b);
var _ref = [1, 2, 3, 4];
_ref = _ref === void 0 ? [] : _ref;

var _ref2 = (_toArray2.default)(_ref),
    array = _ref2.slice(0);

var obj = {
  member: null
};
var _2 = 1;
obj.member = _2 === void 0 ? 42 : _2;
exports.__linariaPreval = [identifier, object, array, obj];"
`;

exports[`shakes es5 exports 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.redColor = 'red';
exports['yellowColor'] = 'yellow';
Object.defineProperty(exports, \\"greenColor\\", {
  enumerable: true,
  get: function get() {
    return 'green';
  }
});"
`;

exports[`shakes exports 1`] = `
"\\"use strict\\";

var _ = require(\\"\\\\u2026\\");

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var a = _.whiteColor;
exports.__linariaPreval = [a];"
`;

exports[`shakes for-in statements 1`] = `
"\\"use strict\\";

var obj1 = {
  a: 1,
  b: 2
};
var obj2 = {};

for (var key in obj1) {
  obj2[key] = obj1[key];
}

exports.__linariaPreval = [obj2];"
`;

exports[`shakes imports 1`] = `
"\\"use strict\\";

var _typeof = require(\\"@babel/runtime/helpers/typeof\\");

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});

var _ = _interopRequireWildcard(require(\\"\\\\u2026\\"));

function _getRequireWildcardCache(nodeInterop) { if (typeof WeakMap !== \\"function\\") return null; var cacheBabelInterop = new WeakMap(); var cacheNodeInterop = new WeakMap(); return (_getRequireWildcardCache = function _getRequireWildcardCache(nodeInterop) { return nodeInterop ? cacheNodeInterop : cacheBabelInterop; })(nodeInterop); }

function _interopRequireWildcard(obj, nodeInterop) { if (!nodeInterop && obj && obj.__esModule) { return obj; } if (obj === null || _typeof(obj) !== \\"object\\" && typeof obj !== \\"function\\") { return { default: obj }; } var cache = _getRequireWildcardCache(nodeInterop); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (key !== \\"default\\" && Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

exports.__linariaPreval = [_.whiteColor, _.default];"
`;

exports[`shakes sequence expression 1`] = `
"\\"use strict\\";

var color1 = (function () {
  return 'blue';
});
var local = '';
var color2 = (local = color1(), function () {
  return local;
});
exports.__linariaPreval = [color2];"
`;

exports[`should keep member expression key 1`] = `
"\\"use strict\\";

var key = 'blue';
var obj = {
  blue: '#00F'
};
var blue = obj[key];
exports.__linariaPreval = [blue];"
`;
